--- a/autenticacao/templates/cadastro.html
+++ b/autenticacao/templates/cadastro.html
@@ -51,8 +51,7 @@
                         <br>
                         <button class="btn-first">Registrar</button>
                     </form>
-
-                    <h3 style="position: absolute; bottom: 65px; font-weight: bold">Já possui uma conta ?&nbsp <a class="btn btn-outline-success btn-lg">Logar</a> </h3>
+                    <h3 style="position: absolute; bottom: 65px; font-weight: bold">Já possui uma conta ?&nbsp <a href="{% url 'logar' %}" class="btn btn-outline-success btn-lg">Logar</a></h3>
                 </div>
             </div>
         </div>
