Criando o cadastro de paciente

--- a/plataforma/templates/pacientes.html
+++ b/plataforma/templates/pacientes.html
@@ -3,6 +3,14 @@
 {% load static %}
 
 {% block 'plataforma'  %}
+    {% if messages %}
+        <br>
+        {% for message in messages %}
+            <div class="alert {{message.tags}}">
+                {{message}}
+            </div>
+        {% endfor %}
+    {% endif %}
     <br>
     <button type="button" class="btn btn-outline-success" data-toggle="modal" data-target="#modal">
       Novo paciente
@@ -19,7 +27,8 @@
               </div>
 
               <div class="modal-body">
-                  <form action="" method="POST">
+                  <form action="{% url 'pacientes' %}" method="POST">
+                      {% csrf_token%}
 
 
                       <div class="row">
