--- a/plataforma/templates/dados_paciente.html
+++ b/plataforma/templates/dados_paciente.html
@@ -23,7 +23,7 @@
     </div>
     <hr>
     <button type="button" class="btn btn-outline-success" data-toggle="modal" data-target="#modal">
-        Adicionar dados do paciente
+        Adicionar Dados do Paciente
     </button>
     <br>
     <br>
@@ -45,7 +45,6 @@
                     <td>{{ dado.percentual_musculo }}</td>
                 </tr>
             {% endfor %}
-
         </tbody>
     </table>
 
@@ -53,138 +52,103 @@
         <div class="modal-dialog" role="document">
             <div class="modal-content">
                 <div class="modal-header">
-
                     <button type="button" class="close" data-dismiss="modal" aria-label="Close">
                         <span aria-hidden="true">&times;</span>
                     </button>
                 </div>
-
                 <div class="modal-body">
                     <form action="{% url 'dados_paciente' paciente.id %}" method="POST">
                         {% csrf_token %}
                         <h4 class="titulo">Dados do paciente</h4>
                         <div class="form-row">
                             <div class='col-md'>
-
-                                    <label for="validationServerUsername">Peso</label>
-                                    <div class="input-group">
-                                        <input type="number" class="form-control" placeholder="--" name="peso">
-                                        <div class="input-group-prepend">
-                                            <span class="input-group-text" id="inputGroupPrepend3">Kg</span>
-                                        </div>
+                                <label for="validationServerUsername">Peso</label>
+                                <div class="input-group">
+                                    <input type="number" class="form-control" placeholder="--" name="peso">
+                                    <div class="input-group-prepend">
+                                        <span class="input-group-text" id="inputGroupPrepend3">Kg</span>
                                     </div>
-
+                                </div>
                             </div>
-
                             <div class='col-md'>
-
-                                    <label for="validationServerUsername">Altura</label>
-                                    <div class="input-group">
-                                        <input type="number" class="form-control" placeholder="--" name="altura">
-                                        <div class="input-group-prepend">
-                                            <span class="input-group-text" id="inputGroupPrepend3">cm</span>
-                                        </div>
+                                <label for="validationServerUsername">Altura</label>
+                                <div class="input-group">
+                                    <input type="number" class="form-control" placeholder="--" name="altura">
+                                    <div class="input-group-prepend">
+                                        <span class="input-group-text" id="inputGroupPrepend3">cm</span>
                                     </div>
-
+                                </div>
                             </div>
-
-
                         </div>
                         <br>
                         <div class="form-row">
                             <div class='col-md'>
-
-                                    <label for="validationServerUsername">Percentual de gordura</label>
-                                    <div class="input-group">
-                                        <input type="number" class="form-control" placeholder="--" name="gordura">
-                                        <div class="input-group-prepend">
-                                            <span class="input-group-text" id="inputGroupPrepend3">%</span>
-                                        </div>
+                                <label for="validationServerUsername">Percentual de gordura</label>
+                                <div class="input-group">
+                                    <input type="number" class="form-control" placeholder="--" name="gordura">
+                                    <div class="input-group-prepend">
+                                        <span class="input-group-text" id="inputGroupPrepend3">%</span>
                                     </div>
-
+                                </div>
                             </div>
-
                             <div class='col-md'>
-
-                                    <label for="validationServerUsername">Percentual de músculo</label>
-                                    <div class="input-group">
-                                        <input type="number" class="form-control" placeholder="--" name="musculo">
-                                        <div class="input-group-prepend">
-                                            <span class="input-group-text" id="inputGroupPrepend3">%</span>
-                                        </div>
+                                <label for="validationServerUsername">Percentual de músculo</label>
+                                <div class="input-group">
+                                    <input type="number" class="form-control" placeholder="--" name="musculo">
+                                    <div class="input-group-prepend">
+                                        <span class="input-group-text" id="inputGroupPrepend3">%</span>
                                     </div>
-
+                                </div>
                             </div>
-
-
                         </div>
                         <br>
                         <h4 class="titulo">Dados laboratoriais</h4>
                         <div class="form-row">
                             <div class='col-md'>
-
-                                    <label for="validationServerUsername">Colesterol HDL</label>
-                                    <div class="input-group">
-                                        <input type="number" class="form-control" placeholder="--" name="hdl">
-                                        <div class="input-group-prepend">
-                                            <span class="input-group-text" id="inputGroupPrepend3">mg/dL</span>
-                                        </div>
+                                <label for="validationServerUsername">Colesterol HDL</label>
+                                <div class="input-group">
+                                    <input type="number" class="form-control" placeholder="--" name="hdl">
+                                    <div class="input-group-prepend">
+                                        <span class="input-group-text" id="inputGroupPrepend3">mg/dL</span>
                                     </div>
-
+                                </div>
                             </div>
-
                             <div class='col-md'>
-
-                                    <label for="validationServerUsername">Colesterol LDL</label>
-                                    <div class="input-group">
-                                        <input type="number" class="form-control" placeholder="--" name="ldl">
-                                        <div class="input-group-prepend">
-                                            <span class="input-group-text" id="inputGroupPrepend3">mg/dL</span>
-                                        </div>
+                                <label for="validationServerUsername">Colesterol LDL</label>
+                                <div class="input-group">
+                                    <input type="number" class="form-control" placeholder="--" name="ldl">
+                                    <div class="input-group-prepend">
+                                        <span class="input-group-text" id="inputGroupPrepend3">mg/dL</span>
                                     </div>
-
+                                </div>
                             </div>
-
-
                         </div>
                         <br>
                         <div class="form-row">
                             <div class='col-md'>
-
-                                    <label for="validationServerUsername">Colesterol total</label>
-                                    <div class="input-group">
-                                        <input type="number" class="form-control" placeholder="--" name="ctotal">
-                                        <div class="input-group-prepend">
-                                            <span class="input-group-text" id="inputGroupPrepend3">mg/dL</span>
-                                        </div>
+                                <label for="validationServerUsername">Colesterol total</label>
+                                <div class="input-group">
+                                    <input type="number" class="form-control" placeholder="--" name="ctotal">
+                                    <div class="input-group-prepend">
+                                        <span class="input-group-text" id="inputGroupPrepend3">mg/dL</span>
                                     </div>
-
+                                </div>
                             </div>
-
                             <div class='col-md'>
-
-                                    <label for="validationServerUsername">Triglicerídios</label>
-                                    <div class="input-group">
-                                        <input type="number" class="form-control" placeholder="--" name="triglicerídios">
-                                        <div class="input-group-prepend">
-                                            <span class="input-group-text" id="inputGroupPrepend3">mg/dL</span>
-                                        </div>
+                                <label for="validationServerUsername">Triglicerídios</label>
+                                <div class="input-group">
+                                    <input type="number" class="form-control" placeholder="--" name="triglicerídios">
+                                    <div class="input-group-prepend">
+                                        <span class="input-group-text" id="inputGroupPrepend3">mg/dL</span>
                                     </div>
-
+                                </div>
                             </div>
-
-
                         </div>
-
                         <br>
-
                         <input type="submit" value="Cadastrar" class="btn btn-success">
-
                     </form>
                 </div>
-
             </div>
         </div>
     </div>
-
 {% endblock%}
