Criando a urls e a views para Refeição e de Opção.

--- a/plataforma/templates/plano_alimentar.html
+++ b/plataforma/templates/plano_alimentar.html
@@ -39,25 +39,29 @@
     <br>
     <br>
     <div class="fundo-alimentar">
-        <div class="refeicao">
-            <div class="head-refeicao">
-                <span>Café da manhã</span>
-                <span style="float: right;">07:00h</span>
-            </div>
-            <div class="body-refeicao">
-                <div class="opcao">
-                    <div class="row">
-                        <div class="col-md-2">
-                            <img width="100%" src="{% static 'plataforma/img/perfil1.png' %}">
-                        </div>
-                        <div class="col-md-10">
-                            Teste 2
+        {% for re in refeicao %}
+            <div class="refeicao">
+                <div class="head-refeicao">
+                    <span>{{ re.titulo }}</span>
+                    <span style="float: right;">{{ re.horario }}</span>
+                </div>
+                <div class="body-refeicao">
+                    <div class="opcao">
+                        <div class="row">
+                            <div class="col-md-2">
+                                <img width="100%" src="{% static 'plataforma/img/perfil1.png' %}">
+                            </div>
+                            <div class="col-md-10">
+                                Teste 2
+                            </div>
                         </div>
                     </div>
                 </div>
             </div>
-        </div>
+            <br>
+        {% endfor %}
     </div>
+
     <div class="modal fade" id="modal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
         <div class="modal-dialog" role="document">
             <div class="modal-content">
@@ -77,7 +81,8 @@
                         <br>
                         <br>
                         <div id="form-refeicao" style="display: block;">
-                            <form action="" method="POST">{% csrf_token %}
+                            <form action="{% url 'refeicao' paciente.id %}" method="POST">
+                                {% csrf_token %}
                                 <label for="validationServerUsername">Título</label>
                                 <div class="input-group">
                                     <input type="text" class="form-control" placeholder="Ex: Café da manhã" name="titulo">
