Criando os templates para Refeição e Opção.

--- a/plataforma/templates/plano_alimentar.html
+++ b/plataforma/templates/plano_alimentar.html
@@ -46,16 +46,21 @@
                     <span style="float: right;">{{ re.horario }}</span>
                 </div>
                 <div class="body-refeicao">
-                    <div class="opcao">
-                        <div class="row">
-                            <div class="col-md-2">
-                                <img width="100%" src="{% static 'plataforma/img/perfil1.png' %}">
+                    {% for o1 in opcao %}
+                        {% if o1.refeicao == re %}
+                            <div class="opcao">
+                                <div class="row">
+                                    <div class="col-md-2">
+                                        <img width="100%" src="{{ o1.imagem.url }}">
+                                    </div>
+                                    <div class="col-md-10">
+                                        {{ o1.descricao}}
+                                    </div>
+                                </div>
                             </div>
-                            <div class="col-md-10">
-                                Teste 2
-                            </div>
-                        </div>
-                    </div>
+                            <br>
+                        {% endif %}
+                    {% endfor %}
                 </div>
             </div>
             <br>
@@ -124,11 +129,14 @@
                             </form>
                         </div>
                         <div id="form-opcao" style="display: none;">
-                            <form action="" method="POST" enctype='multipart/form-data'>{% csrf_token %}
+                            <form action="{% url 'opcao' paciente.id %}" method="POST" enctype='multipart/form-data'>
+                                {% csrf_token %}
                                 <label for="validationServerUsername">Selecione a refeição</label>
                                 <div class="input-group">
                                     <select class="form-control" name="refeicao">
-                                        <option value="">Café da manhã</option>
+                                        {% for re in refeicao %}
+                                            <option value="{{ re.id }}">{{ re.titulo }}</option>
+                                        {% endfor %}
                                     </select>
                                 </div>
                                 <br>
