--- a/templates/base_plataforma.html
+++ b/templates/base_plataforma.html
@@ -4,6 +4,7 @@
 
 {% block 'head' %}
     <link rel="stylesheet" href="{% static 'plataforma/css/css.css' %}">
+    <link rel="stylesheet" href="{% static 'plataforma/css/plano_alimentar.css' %}">
 {% endblock %}
 
 {% block 'body' %}
