--- a/plataforma/templates/plano_alimentar.html
+++ b/plataforma/templates/plano_alimentar.html
@@ -3,14 +3,7 @@
 {% load static %}
 
 {% block 'plataforma' %}
-    {% if messages %}
-        <br>
-        {% for message in messages %}
-            <div class="alert {{message.tags}}">
-                {{message}}
-            </div>
-        {% endfor %}
-    {% endif %}
+    {% include 'partials/mensagens.html' %}
     <br>
     <div class="row">
         <div class="col-md-3">
